--- a/views/index.html
+++ b/views/index.html
@@ -2,13 +2,25 @@
 <html>
 
 <head>
-  <title>About</title>
+  <title>Schedule</title>
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
+  <style>
+    img 
+    {  
+      float:left;
+    width: 50px;  
+    height: 50px;  
+    }
+  </style>
 </head>
 <header>  
   <div class="navbar">
-    <div class= "h1">
-    <h1>Indiana University Kokomo</h1>
+    <div>
+      <a href="https://www.iuk.edu/library/">
+        <img src="logo.png" alt="IU logo">
+        <div class= "h1">
+          <h1>Indiana University Kokomo</h1>
+      </a>
     </div>
     <a href="https://iuk.libguides.com/?b=g&d=a">LibGuides</a>
     <a href="https://iucat.iu.edu/iuk">Catalog Search</a>
@@ -19,7 +31,7 @@
   </div>
 </header>
 <body>
-  <h1>IUK Study Room scheduler</h1>
+  <h1>IUK Study Room Scheduler</h1>
 
   
 </body>
