--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Schedule</title>
+  <title>Reservations</title>
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
   <style>
     img 
@@ -31,11 +31,10 @@
   </div>
 </header>
 <body>
-  <h1>IUK Study Room Scheduler</h1>
+  <h1>Student Info</h1>
 
-  <p><a href="/reservations">RESERVATION PAGE</a>
-    <a href="/cancelation">CANCELATION PAGE</a>
-  </p>
+  <a href="/confirmation">Put confirm cancel Button here</a>
+  <a href="/">cancel cancel button</a>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
