--- a/views/reservations.html
+++ b/views/reservations.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Schedule</title>
+  <title>Reservations</title>
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
   <style>
     img 
@@ -31,11 +31,9 @@
   </div>
 </header>
 <body>
-  <h1>IUK Study Room Scheduler</h1>
+  <h1>Study Room Reservations</h1>
 
-  <p><a href="/reservations">RESERVATION PAGE</a>
-    <a href="/cancelation">CANCELATION PAGE</a>
-  </p>
+  <a href="/studentinfo">Insert Go Button Here</a>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
