--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -31,11 +31,9 @@
   </div>
 </header>
 <body>
-  <h1>IUK Study Room Scheduler</h1>
-
-  <p><a href="/reservations">RESERVATION PAGE</a>
-    <a href="/cancelation">CANCELATION PAGE</a>
-  </p>
+  <h1>Confirmation</h1>
+<p>thank you</p>
+  
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
