--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -32,9 +32,20 @@
 </header>
 <body>
   <h1>Student Info</h1>
-
-  <a href="/confirmation">Put Confirmation Button here</a>
+<form>
+  <label for="name">First and Last Name</label><br>
+  <input type="text" id="name" name="name"><br>
+  <label for="idnum">Student ID Number</label><br>
+  <input type="text" id="idnum" name="idnum"><br><br>
+  <label for="email"></label>IU Email Address<br>
+  <input type="text" id="email" name="email"><br><br>
+  <label for="reservation">Reservation Name (To Appear on Door)</label><br>
+  <input type="text" id="reservation" name="reservation"><br><br>
+  <input type="submit" value="Go">
+</form>
+  <!--<button type="button">Go</button>-->
+  <!--<a href="/confirmation">Put Confirmation Button here</a> -->
 </body>
-<footer>&copy;Ogre, Inc</footer>
+<footer>&copy;Ogres, Inc</footer>
 
 </html>
