--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -31,7 +31,9 @@
   </div>
 </header>
 <body>
-  <h1>Student Info</h1>
+  <h1>Study Room Reservations</h1>
+  <h2>Student Information</h2>
+  <p>Please enter the following information:</p>
 <form>
   <label for="name">First and Last Name</label><br>
   <input type="text" id="name" name="name"><br>
@@ -46,6 +48,7 @@
   <!--<button type="button">Go</button>-->
   <!--<a href="/confirmation">Put Confirmation Button here</a> -->
 </body>
+<br/>
 <footer>&copy;Ogres, Inc</footer>
 
 </html>
