--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Reservations</title>
+  <title>Study Room Reservation</title>
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
   <style>
     img 
@@ -49,6 +49,6 @@
   <!--<a href="/confirmation">Put Confirmation Button here</a> -->
 </body>
 <br/>
-<footer>&copy;Ogres, Inc</footer>
+<footer>&copy; Ogres, Inc</footer>
 
 </html>
