--- a/views/reservations.html
+++ b/views/reservations.html
@@ -33,27 +33,22 @@
 <body>
   <h1>Study Room Reservations</h1>
 
-  <a href="/studentinfo">Insert Go Button Here</a>
+  <a href="/studentinfo">Insert Go Button Here</a> </body><br>
 
-  <div class="rvt-dropdown" data-rvt-dropdown="dropdownHeading">
-    <button type="button" class="rvt-button" data-rvt-dropdown-toggle="dropdownHeading" aria-haspopup="true" aria-expanded="false">
-      <span class="rvt-dropdown__toggle-text">Dropdown with heading</span>
+  <div class="rvt-dropdown" data-rvt-dropdown="dropdownDefault">
+    <button type="button" class="rvt-button rvt-button" data-rvt-dropdown-toggle="dropdownDefault" aria-haspopup="true" aria-expanded="false">
+      <span class="rvt-dropdown__toggle-text">Dropdown menu</span>
       <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
         <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
       </svg>
     </button>
-    <div class="rvt-dropdown__menu" id="dropdownHeading" hidden data-rvt-dropdown-menu>
+    <div class="rvt-dropdown__menu" id="dropdownDefault" hidden data-rvt-dropdown-menu>
       <a href="#">Item one</a>
       <a href="#" aria-current="page">Item two</a>
       <a href="#">Item three</a>
-      <div class="rvt-dropdown__menu-heading" aria-hidden="true">Group name</div>
-      <div role="group" aria-label="Group name">
-        <a href="#">Item four</a>
-        <a href="#">Item five</a>
-      </div>
     </div>
   </div>
-  
+
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
