testing if dropdown works

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -31,6 +31,9 @@
   </div>
 </header>
 <body>
+  <script src="https://unpkg.com/rivet-core@2.0.0-beta/js/rivet.min.js"></script>
+  <script>Rivet.init();</script>
+  
   <h1>Study Room Reservations</h1>
 
   <div class="rvt-dropdown" data-rvt-dropdown="dropdownDate">
@@ -45,9 +48,9 @@
       <a href="#" aria-current="page">Item two</a>
       <a href="#">Item three</a>
     </div>
-  </div>
+  </div> <br>
 
-  <a href="/studentinfo">Insert Go Button Here</a> </body><br>
+  <a href="/studentinfo">Insert Go Button Here</a> </body>
 
 </body>
 <footer>&copy;Ogre, Inc</footer>
