break line adjustments

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -48,7 +48,7 @@
       <a href="#" aria-current="page">Item two</a>
       <a href="#">Item three</a>
     </div>
-  </div> <br>
+  </div> <br></br>
 
   <a href="/studentinfo">Insert Go Button Here</a> </body>
 
