--- a/views/reservations.html
+++ b/views/reservations.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Reservations</title>
+  <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta/css/rivet.min.css">
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
   <style>
     img 
