--- a/views/reservations.html
+++ b/views/reservations.html
@@ -78,28 +78,11 @@
   </div> 
   
   <br></br>  
-  
-    <!-- dropdown for selecting a time -->
-    <div class="rvt-dropdown" data-rvt-dropdown="dropdownTime">
-      <button type="button" class="rvt-button rvt-button" data-rvt-dropdown-toggle="dropdownTime" aria-haspopup="true" aria-expanded="false">
-        <span class="rvt-dropdown__toggle-text">Please select a time</span>
-        <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-          <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
-        </svg>
-      </button>
-      <div class="rvt-dropdown__menu" id="dropdownTime" hidden data-rvt-dropdown-menu>
-        <a href="#">Item one</a>
-        <a href="#" aria-current="page">Item two</a>
-        <a href="#">Item three</a>
-      </div>
-    </div> 
-    
-    <br></br>
 
       <!-- dropdown for selecting a room -->
   <div class="rvt-dropdown" data-rvt-dropdown="dropdownTime">
     <button type="button" class="rvt-button rvt-button" data-rvt-dropdown-toggle="dropdownTime" aria-haspopup="true" aria-expanded="false">
-      <span class="rvt-dropdown__toggle-text">Please select a time</span>
+      <span class="rvt-dropdown__toggle-text">Please select a room</span>
       <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
         <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
       </svg>
