--- a/views/reservations.html
+++ b/views/reservations.html
@@ -43,7 +43,7 @@
   <script src="https://unpkg.com/rivet-core@2.0.0-beta/js/rivet.min.js"></script>
   <script>Rivet.init();</script>
   
-  <h1>Study Room Reservations</h1>
+  <h1>Study Room Reservation</h1> <br></br>
 
   <!-- dropdown for selecting a date -->
   <div class="rvt-dropdown" data-rvt-dropdown="dropdownDate">
