working on buttons

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -95,6 +95,10 @@
   </div> 
   
   <br></br>
+
+  <!-- go back to home page button -->
+  <div class="rvt-button-group">
+    <button class="rvt-button">Go back </button>
   <a href="/studentinfo">Insert Go Button Here</a> </body>
 
 </body>
