--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -43,7 +43,7 @@
   <input type="text" id="email" name="email"><br><br>
   <label for="reservation">Reservation Name (To Appear on Door)</label><br>
   <input type="text" id="reservation" name="reservation"><br><br>
-  <a href="/confirmation">i<nput type="submit" value="Go"></a>
+  <a href="/confirmation">Submit<nput type="submit" value="Go"></a>
 </form>
   <!--<button type="button">Go</button>-->
   <!--<a href="/confirmation">Put Confirmation Button here</a> -->
