--- a/views/reservations.html
+++ b/views/reservations.html
@@ -98,7 +98,8 @@
 
   <!-- go back to home page button -->
   <div class="rvt-button-group">
-    <button class="rvt-button">Go back </button>
+    <a href = "/"><button class="rvt-button">Go back </button> </a>
+
   <a href="/studentinfo">Insert Go Button Here</a> </body>
 
 </body>
