--- a/views/reservations.html
+++ b/views/reservations.html
@@ -100,7 +100,8 @@
   <div class="rvt-button-group">
     <a href = "/"><button class="rvt-button">Go back </button> </a>
 
-  <a href="/studentinfo">Insert Go Button Here</a> </body>
+  <a href="/studentinfo"><button class="rvt-button">Continue </button></a> 
+
 
 </body>
 <footer>&copy;Ogre, Inc</footer>
