--- a/views/reservations.html
+++ b/views/reservations.html
@@ -100,7 +100,7 @@
   <div class="rvt-button-group">
     <a href = "/"><button class="rvt-button">Go back </button> </a>
 
-  <a href="/studentinfo"><button class="rvt-button">Continue </button></a> 
+  <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a> 
 
 
 </body>
