--- a/views/reservations.html
+++ b/views/reservations.html
@@ -45,20 +45,9 @@
   
   <h1>Study Room Reservation</h1> <br></br>
 
-  <!-- dropdown for selecting a date -->
-  <div class="rvt-dropdown" data-rvt-dropdown="dropdownDate">
-    <button type="button" class="rvt-button rvt-button" data-rvt-dropdown-toggle="dropdownDate" aria-haspopup="true" aria-expanded="false">
-      <span class="rvt-dropdown__toggle-text">Please select a date</span>
-      <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-        <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
-      </svg>
-    </button>
-    <div class="rvt-dropdown__menu" id="dropdownDate" hidden data-rvt-dropdown-menu>
-      <a href="#">Item one</a>
-      <a href="#" aria-current="page">Item two</a>
-      <a href="#">Item three</a>
-    </div>
-  </div> 
+  <!-- input text box for date -->
+  <label for="text-input-default" class="rvt-label">Please enter date (mm/dd/yy)</label>
+<input type="text" id="text-input-default" class="rvt-text-input">
   
   <br></br>
 
