added room numbers

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -77,9 +77,16 @@
       </svg>
     </button>
     <div class="rvt-dropdown__menu" id="dropdownTime" hidden data-rvt-dropdown-menu>
-      <a href="#">Item one</a>
-      <a href="#" aria-current="page">Item two</a>
-      <a href="#">Item three</a>
+      <a href="#">KA220</a>
+      <a href="#" >KA220</a>
+      <a href="#">KA224</a>
+      <a href="#">KA226</a>
+      <a href="#">KA116</a>
+      <a href="#">KA118</a>
+      <a href="#">KA147</a>
+      <a href="#">KA149</a>
+      <a href="#">KA155</a>
+      <a href="#">KA157</a>
     </div>
   </div> 
   
@@ -89,6 +96,8 @@
   <div class="rvt-button-group">
     <a href = "/"><button class="rvt-button">Go back </button> </a>
 
+  <!-- go back to next page button -->
+  <div class="rvt-button-group">
   <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a> 
 
 
