--- a/views/reservations.html
+++ b/views/reservations.html
@@ -77,6 +77,7 @@
       </svg>
     </button>
     <div class="rvt-dropdown__menu" id="dropdownTime" hidden data-rvt-dropdown-menu>
+      <a href="#"></a>aria-current="room"></a>
       <a href="#">KA220</a>
       <a href="#" >KA220</a>
       <a href="#">KA224</a>
@@ -102,6 +103,7 @@
 
 
 </body>
+
 <footer>&copy;Ogre, Inc</footer>
 
 </html>
