--- a/views/reservations.html
+++ b/views/reservations.html
@@ -77,8 +77,7 @@
       </svg>
     </button>
     <div class="rvt-dropdown__menu" id="dropdownTime" hidden data-rvt-dropdown-menu>
-      <a href="#"></a>aria-current="room"></a>
-      <a href="#">KA220</a>
+      <a href="#" aria-current="page">KA220</a>
       <a href="#" >KA220</a>
       <a href="#">KA224</a>
       <a href="#">KA226</a>
