--- a/views/reservations.html
+++ b/views/reservations.html
@@ -69,26 +69,53 @@
   <br></br>  
 
       <!-- dropdown for selecting a room -->
-  <div class="rvt-dropdown" data-rvt-dropdown="dropdownTime">
-    <button type="button" class="rvt-button rvt-button" data-rvt-dropdown-toggle="dropdownTime" aria-haspopup="true" aria-expanded="false">
-      <span class="rvt-dropdown__toggle-text">Please select a room</span>
-      <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-        <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
-      </svg>
-    </button>
-    <div class="rvt-dropdown__menu" id="dropdownTime" hidden data-rvt-dropdown-menu>
-      <a href="#" aria-current="page">KA220</a>
-      <a href="#" >KA220</a>
-      <a href="#">KA224</a>
-      <a href="#">KA226</a>
-      <a href="#">KA116</a>
-      <a href="#">KA118</a>
-      <a href="#">KA147</a>
-      <a href="#">KA149</a>
-      <a href="#">KA155</a>
-      <a href="#">KA157</a>
-    </div>
-  </div> 
+      <div class="rvt-dropdown" data-rvt-dropdown="dropdownButtonsRoomSelector">
+        <button type="button" class="rvt-button" data-rvt-dropdown-toggle="dropdownButtonsRoomSelector" aria-haspopup="true" aria-expanded="false">
+          <span class="rvt-dropdown__toggle-text">Dropdown with buttons</span>
+          <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+            <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
+          </svg>
+        </button>
+        <div class="rvt-dropdown__menu" id="dropdownButtons" role="menu" hidden data-rvt-dropdown-menu>
+          <div class="rvt-dropdown__menu-heading" aria-hidden="true">First Floor</div>
+          <div role="group" aria-label="First Floor">
+          <button type="button" aria-checked="true"  role="room">
+            <span>KA116</span>
+          </button>
+            <button type="button" role="room">
+            <span>KA118</span>
+          </button>
+            <button type="button" role="room">
+            <span>KA147</span>
+          </button>
+            <button type="button" role="room">
+            <span>KA149</span>
+          </button>
+            <button type="button" role="room">
+            <span>KA155</span>
+          </button><button type="button" role="room">
+            <span>KA157</span>
+          </button>
+          <div class="rvt-dropdown__menu-heading" aria-hidden="true">Second Floor</div>
+          <div role="group" aria-label="Second Floor">
+          <button type="button" role="room">
+            <span>KA220</span>
+          </button>
+          <button type="button" role="room">
+            <span>KA222</span>
+          </button>
+          <button type="button" role="room">
+            <span>KA224</span>
+          </button>
+            <button type="button" role="room">
+              <span>KA226</span>
+            </button>
+            <button type="button" role="room">
+              <span>KA228</span>
+            </button>
+          </div>
+        </div>
+      </div>
   
   <br></br>
 
