--- a/views/reservations.html
+++ b/views/reservations.html
@@ -52,65 +52,77 @@
   <br></br>
 
   <!-- dropdown for selecting a time -->
-  <div class="rvt-dropdown" data-rvt-dropdown="dropdownTime">
-    <button type="button" class="rvt-button rvt-button" data-rvt-dropdown-toggle="dropdownTime" aria-haspopup="true" aria-expanded="false">
+  <div class="rvt-dropdown" data-rvt-dropdown="dropdownButtonsTIme">
+    <button type="button" class="rvt-button" data-rvt-dropdown-toggle="dropdownButtonsTime" aria-haspopup="true" aria-expanded="false">
       <span class="rvt-dropdown__toggle-text">Please select a time</span>
       <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
         <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
       </svg>
     </button>
-    <div class="rvt-dropdown__menu" id="dropdownTime" hidden data-rvt-dropdown-menu>
-      <a href="#">Item one</a>
-      <a href="#" aria-current="page">Item two</a>
-      <a href="#">Item three</a>
+    <div class="rvt-dropdown__menu" id="dropdownButtons" role="menu" hidden data-rvt-dropdown-menu>
+      <button type="button" role="time1">
+        <span>time 1</span>
+      </button>
+      <button type="button" aria-checked="true" role="time2">
+        <span>time 2</span>
+      </button>
+      <button type="button" role="time3">
+        <span>time 3</span>
+      </button>
+        <button type="button" role="time4">
+          <span>time 4</span>
+        </button>
+        <button type="button" role="time5">
+          <span>time 5</span>
+        </button>
     </div>
-  </div> 
+  </div>
   
   <br></br>  
 
       <!-- dropdown for selecting a room -->
       <div class="rvt-dropdown" data-rvt-dropdown="dropdownButtonsRoomSelector">
         <button type="button" class="rvt-button" data-rvt-dropdown-toggle="dropdownButtonsRoomSelector" aria-haspopup="true" aria-expanded="false">
-          <span class="rvt-dropdown__toggle-text">Dropdown with buttons</span>
+          <span class="rvt-dropdown__toggle-text">Please select a room</span>
           <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
             <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
           </svg>
         </button>
-        <div class="rvt-dropdown__menu" id="dropdownButtons" role="menu" hidden data-rvt-dropdown-menu>
+        <div class="rvt-dropdown__menu" id="dropdownButtonsRoomSelector" role="menu" hidden data-rvt-dropdown-menu>
           <div class="rvt-dropdown__menu-heading" aria-hidden="true">First Floor</div>
           <div role="group" aria-label="First Floor">
           <button type="button" aria-checked="true"  role="room">
             <span>KA116</span>
           </button>
-            <button type="button" role="room">
+            <button type="button" role="room1">
             <span>KA118</span>
           </button>
-            <button type="button" role="room">
+            <button type="button" role="room2">
             <span>KA147</span>
           </button>
-            <button type="button" role="room">
+            <button type="button" role="room3">
             <span>KA149</span>
           </button>
-            <button type="button" role="room">
+            <button type="button" role="room4">
             <span>KA155</span>
-          </button><button type="button" role="room">
+          </button><button type="button" role="room5">
             <span>KA157</span>
           </button>
           <div class="rvt-dropdown__menu-heading" aria-hidden="true">Second Floor</div>
           <div role="group" aria-label="Second Floor">
-          <button type="button" role="room">
+          <button type="button" role="room6">
             <span>KA220</span>
           </button>
-          <button type="button" role="room">
+          <button type="button" role="room7">
             <span>KA222</span>
           </button>
-          <button type="button" role="room">
+          <button type="button" role="room8">
             <span>KA224</span>
           </button>
-            <button type="button" role="room">
+            <button type="button" role="room9">
               <span>KA226</span>
             </button>
-            <button type="button" role="room">
+            <button type="button" role="room0">
               <span>KA228</span>
             </button>
           </div>
