--- a/views/reservations.html
+++ b/views/reservations.html
@@ -10,12 +10,13 @@
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
 
   <style>
-    img 
-    {  
+    img {  
       float:left;
     width: 50px;  
     height: 50px;  
     }
+
+    h1 {font-size: larger;}
   </style>
 </head>
 
