--- a/views/reservations.html
+++ b/views/reservations.html
@@ -11,12 +11,17 @@
 
   <style>
     img {  
-      float:left;
+    float:left;
     width: 50px;  
     height: 50px;  
+  }
+    h1 {font-size: xx-large;}
+    body{ text-align: center;}
+    div{
+      display: flex;
     }
 
-    h1 {font-size: xx-large;}
+
   </style>
 </head>
 
