--- a/views/reservations.html
+++ b/views/reservations.html
@@ -53,31 +53,13 @@
   <br></br>
 
   <!-- dropdown for selecting a time -->
-  <div class="rvt-dropdown" data-rvt-dropdown="dropdownButtonsTIme">
-    <button type="button" class="rvt-button" data-rvt-dropdown-toggle="dropdownButtonsTime" aria-haspopup="true" aria-expanded="false">
-      <span class="rvt-dropdown__toggle-text">Please select a time</span>
-      <svg aria-hidden="true" class="rvt-m-left-xs" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-        <path fill="currentColor" d="M8,12.46a2,2,0,0,1-1.52-.7L1.24,5.65a1,1,0,1,1,1.52-1.3L8,10.46l5.24-6.11a1,1,0,0,1,1.52,1.3L9.52,11.76A2,2,0,0,1,8,12.46Z" />
-      </svg>
-    </button>
-    <div class="rvt-dropdown__menu" id="dropdownButtons" role="menu" hidden data-rvt-dropdown-menu>
-      <button type="button" role="time1">
-        <span>time 1</span>
-      </button>
-      <button type="button" aria-checked="true" role="time2">
-        <span>time 2</span>
-      </button>
-      <button type="button" role="time3">
-        <span>time 3</span>
-      </button>
-        <button type="button" role="time4">
-          <span>time 4</span>
-        </button>
-        <button type="button" role="time5">
-          <span>time 5</span>
-        </button>
-    </div>
-  </div>
+  <label for="select-input-default" class="rvt-label">Please select a time:</label>
+  <select id="select-input-default" class="rvt-select">
+    <option value="time 1">Time 1</option>
+    <option value="time 2">Time 2</option>
+    <option value="time 3">Time 3</option>
+    <option value="time 4">Time 4</option>
+  </select>
   
   <br></br>  
 
