--- a/views/reservations.html
+++ b/views/reservations.html
@@ -17,7 +17,7 @@
   }
     h1 {font-size: xx-large;}
     body{ text-align: center;}
-    input{width: 200 xp;}
+    input{width: 100 px;}
   </style>
 </head>
 
