size testing again

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -65,7 +65,7 @@
   <br></br>  
 
       <!-- dropdown for selecting a room -->
-      <label for="select-input-default" class="rvt-label">Please select a time:</label>
+      <label for="select-input-default" class="rvt-label" size: 40>Please select a time:</label>
       <select id="select-input-default" class="rvt-select">
         <option value="First floor">KA116</option>
         <option value="First floor">KA118</option>
