--- a/views/reservations.html
+++ b/views/reservations.html
@@ -55,7 +55,7 @@
 
   <!-- dropdown for selecting a time -->
   <label for="select-input-default" class="rvt-label">Please select a time:</label>
-  <select id="select-input-default" class="rvt-select">
+  <select id="select-input-default" class="rvt-select" placeholder="Enter name">
     <option value="time 1">Time 1</option>
     <option value="time 2">Time 2</option>
     <option value="time 3">Time 3</option>
@@ -65,7 +65,7 @@
   <br></br>  
 
       <!-- dropdown for selecting a room -->
-      <label for="select-input-default" class="rvt-label" size: 40>Please select a time:</label>
+      <label for="select-input-default" class="rvt-label">Please select a time:</label>
       <select id="select-input-default" class="rvt-select">
         <option value="First floor">KA116</option>
         <option value="First floor">KA118</option>
