--- a/views/reservations.html
+++ b/views/reservations.html
@@ -49,13 +49,13 @@
 
   <!-- input text box for date -->
   <label for="text-input-default" class="rvt-label">Please enter date (mm/dd/yy)</label>
-<input type="text" id="text-input-default" class="rvt-text-input">
+<input type="text" id="text-input-default" placeholder="Enter name" class="rvt-text-input">
   
   <br></br>
 
   <!-- dropdown for selecting a time -->
   <label for="select-input-default" class="rvt-label">Please select a time:</label>
-  <select id="select-input-default" class="rvt-select" placeholder="Enter name">
+  <select id="select-input-default" class="rvt-select">
     <option value="time 1">Time 1</option>
     <option value="time 2">Time 2</option>
     <option value="time 3">Time 3</option>
