input box edits

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -48,8 +48,8 @@
   <h1>Study Room Reservation</h1> <br></br>
 
   <!-- input text box for date -->
-  <label for="text-input-default" class="rvt-label">Please enter date (mm/dd/yy)</label>
-<input type="text" id="text-input-default" placeholder="Enter name" class="rvt-text-input">
+  <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
+<input type="text" id="text-input-default" placeholder="mm/dd/yy" size="40" class="rvt-text-input">
   
   <br></br>
 
