input box edits pt.2

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -49,7 +49,7 @@
 
   <!-- input text box for date -->
   <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
-<input type="text" id="text-input-default" placeholder="mm/dd/yy" size="40" class="rvt-text-input">
+<input type="text" id="text-input-default" size="20" placeholder="mm/dd/yy" class="rvt-text-input">
   
   <br></br>
 
