--- a/views/reservations.html
+++ b/views/reservations.html
@@ -17,7 +17,7 @@
   }
     h1 {font-size: xx-large;}
     body{ text-align: center;}
-    input{width: 50px;}
+    
   </style>
 </head>
 
@@ -49,7 +49,7 @@
 
   <!-- input text box for date -->
   <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
-<input type="text" id="text-input-default" size="20" placeholder="mm/dd/yy" class="rvt-text-input">
+<input type="text" id="text-input-default" style="width: 30px;" placeholder="mm/dd/yy" class="rvt-text-input">
   
   <br></br>
 
