--- a/views/reservations.html
+++ b/views/reservations.html
@@ -10,14 +10,26 @@
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
 
   <style>
-    img {  
-    float:left;
-    width: 50px;  
-    height: 50px;  
-  }
-    h1 {font-size: xx-large;}
-    body{ text-align: center;}
+    img {
+      float:left;
+        width: 50px;  
+        height: 50px;
+      }
+
+    h1 {
+      font-size: xx-large;
+        font-weight: bold;
+      }
+
+    body{text-align: center;}
     
+  
+    .center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
   </style>
 </head>
 
