--- a/views/reservations.html
+++ b/views/reservations.html
@@ -12,24 +12,24 @@
   <style>
     img {
       float:left;
-        width: 50px;  
-        height: 50px;
+      width: 50px;  
+      height: 50px;
       }
 
     h1 {
       font-size: xx-large;
-        font-weight: bold;
+      font-weight: bold;
       }
 
-    body{text-align: center;}
+    body{
+      text-align: center;
+      font-size: medium;
+    }
+
+    input{
+      text-align: center;
+    }
     
-  
-    .center {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
-}
   </style>
 </head>
 
