--- a/views/reservations.html
+++ b/views/reservations.html
@@ -25,11 +25,6 @@
       text-align: center;
       font-size: medium;
     }
-
-    input{
-      width: 50%;
-    }
-    
   </style>
 </head>
 
@@ -61,13 +56,13 @@
 
   <!-- input text box for date -->
   <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
-<input type="text" id="text-input-default" style="width: 200px;" placeholder="mm/dd/yy" class="rvt-text-input">
+  <input type="text" id="text-input-default" style="align-items: center;" placeholder="mm/dd/yy" class="rvt-text-input">
   
   <br></br>
 
   <!-- dropdown for selecting a time -->
-  <label for="select-input-default" class="rvt-label">Please select a time:</label>
-  <select id="select-input-default" class="rvt-select">
+  <label for="select-input-default=Time" class="rvt-label">Please select a time:</label>
+  <select id="select-input-default-Time" class="rvt-select">
     <option value="time 1">Time 1</option>
     <option value="time 2">Time 2</option>
     <option value="time 3">Time 3</option>
@@ -77,8 +72,8 @@
   <br></br>  
 
       <!-- dropdown for selecting a room -->
-      <label for="select-input-default" class="rvt-label">Please select a time:</label>
-      <select id="select-input-default" class="rvt-select">
+      <label for="select-input-default-Room" class="rvt-label">Please select a time:</label>
+      <select id="select-input-default-Room" class="rvt-select">
         <option value="First floor">KA116</option>
         <option value="First floor">KA118</option>
         <option value="First floor">KA147</option>
