div style teset

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -55,9 +55,11 @@
   <h1>Study Room Reservation</h1> <br></br>
 
   <!-- input text box for date -->
-  <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
-  <input type="text" id="text-input-default" style="align-items: center;" placeholder="mm/dd/yy" class="rvt-text-input">
-  
+  <div style="text-align: center;" >
+    <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
+    <input type="text" id="text-input-default" style="width: 200px;"  placeholder="mm/dd/yy" class="rvt-text-input">
+  </div>
+
   <br></br>
 
   <!-- dropdown for selecting a time -->
