--- a/views/reservations.html
+++ b/views/reservations.html
@@ -25,6 +25,10 @@
       text-align: center;
       font-size: medium;
     }
+
+    div{
+      text-align: center;
+    }
   </style>
 </head>
 
@@ -55,9 +59,9 @@
   <h1>Study Room Reservation</h1> <br></br>
 
   <!-- input text box for date -->
-  <div style="text-align: center;" >
+  <div>
     <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
-    <input type="text" id="text-input-default" style="width: 200px;"  placeholder="mm/dd/yy" class="rvt-text-input">
+    <input type="text" id="text-input-default" style="width: 200px;" placeholder="mm/dd/yy" class="rvt-text-input">
   </div>
 
   <br></br>
