--- a/views/reservations.html
+++ b/views/reservations.html
@@ -68,7 +68,7 @@
 
   <!-- dropdown for selecting a time -->
   <label for="select-input-default=Time" class="rvt-label">Please select a time:</label>
-  <select id="select-input-default-Time" class="rvt-select">
+  <select id="select-input-default-Time" style="width: 200px;" class="rvt-select">
     <option value="time 1">Time 1</option>
     <option value="time 2">Time 2</option>
     <option value="time 3">Time 3</option>
