text box sizing room

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -79,7 +79,7 @@
 
       <!-- dropdown for selecting a room -->
       <label for="select-input-default-Room" class="rvt-label">Please select a time:</label>
-      <select id="select-input-default-Room" class="rvt-select">
+      <select id="select-input-default-Room" style="width: 200px;" class="rvt-select">
         <option value="First floor">KA116</option>
         <option value="First floor">KA118</option>
         <option value="First floor">KA147</option>
