testing center spacing

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -65,7 +65,7 @@
   <!-- input text box for date -->
   <div>
     <label for="text-input-default" class="rvt-label">Please enter the date you want to reserve a study room for:</label>
-    <input type="text" id="text-input-default" style="width: 200px;" placeholder="mm/dd/yy" class="rvt-text-input">
+    <input type="text" id="text-input-default" style="width: 200px;" placeholder="mm/dd/yy" class="rvt-text-input margin:auto;">
   </div>
 
   <br></br>
