adding center spacing

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -72,7 +72,7 @@
 
   <!-- dropdown for selecting a time -->
   <label for="select-input-default=Time" class="rvt-label">Please select a time:</label>
-  <select id="select-input-default-Time" style="width: 200px;" class="rvt-select">
+  <select id="select-input-default-Time" style="width: 200px; margin:auto;" class="rvt-select">
     <option value="time 1">Time 1</option>
     <option value="time 2">Time 2</option>
     <option value="time 3">Time 3</option>
@@ -83,7 +83,7 @@
 
       <!-- dropdown for selecting a room -->
       <label for="select-input-default-Room" class="rvt-label">Please select a time:</label>
-      <select id="select-input-default-Room" style="width: 200px;" class="rvt-select">
+      <select id="select-input-default-Room" style="width: 200px; margin:auto;" class="rvt-select">
         <option value="First floor">KA116</option>
         <option value="First floor">KA118</option>
         <option value="First floor">KA147</option>
