fixing div issues

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -30,10 +30,6 @@
       text-align: center;
       margin: auto;
     }
-
-    label{
-      font-size: large;
-    }
   </style>
 </head>
 
@@ -102,10 +98,12 @@
   <!-- go back to home page button -->
   <div class="rvt-button-group">
     <a href = "/"><button class="rvt-button">Go back </button> </a>
+  </div>
 
   <!-- go back to next page button -->
   <div class="rvt-button-group">
-  <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a> 
+  <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
+  </div>
 
 </body>
 
