--- a/views/reservations.html
+++ b/views/reservations.html
@@ -101,7 +101,7 @@
   </div>
 
   <!-- go back to next page button -->
-  <div class="rvt-button-group">
+  <div class="rvt-button-group" margin="auto">
   <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
   </div>
 
