--- a/views/reservations.html
+++ b/views/reservations.html
@@ -28,7 +28,6 @@
 
     div{
       text-align: center;
-      margin: auto;
     }
   </style>
 </head>
@@ -96,12 +95,12 @@
   <br></br>
 
   <!-- go back to home page button -->
-  <div class="rvt-button-group">
+  <div class="rvt-button-group" margin= "auto">
     <a href = "/"><button class="rvt-button">Go back </button> </a>
   </div>
 
   <!-- go back to next page button -->
-  <div class="rvt-button-group" margin="auto">
+  <div class="rvt-button-group" margin="center">
   <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
   </div>
 
