--- a/views/reservations.html
+++ b/views/reservations.html
@@ -100,7 +100,7 @@
   </div>
 
   <!-- go back to next page button -->
-  <div class="rvt-button-group" margin="auto">
+  <div class="rvt-button-group" style="margin: auto">
   <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
   </div>
 
