dorpdown updates pt. 2

--- a/views/reservations.html
+++ b/views/reservations.html
@@ -71,7 +71,7 @@
   <!-- dropdown for selecting a time -->
   <label for="select-input-default=Time" class="rvt-label">Please select a time:</label>
   <select id="select-input-default-Time" style="width: 200px; margin:auto;" class="rvt-select">
-    <option value="Please select a time">Time 1</menu>
+    <option value="starter">Please select a time</menu>
     <option value="time 1">Time 1</option>
     <option value="time 2">Time 2</option>
     <option value="time 3">Time 3</option>
@@ -81,9 +81,9 @@
   <br></br>  
 
       <!-- dropdown for selecting a room -->
-      <label for="select-input-default-Room" class="rvt-label">Please select a time:</label>
+      <label for="select-input-default-Room" class="rvt-label">Please select a room:</label>
       <select id="select-input-default-Room" style="width: 200px; margin:auto;" class="rvt-select">
-        <option value="Please select a room">KA116</menu>
+        <option value="starter">Please select a room</menu>
         <option value="First floor">KA116</option>
         <option value="First floor">KA118</option>
         <option value="First floor">KA147</option>
