--- a/views/confirm-cancelation.html
+++ b/views/confirm-cancelation.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Cancelation</title>
+  <title>Schedule</title>
   <link rel="stylesheet" type="text/css"   href="/css/stylesheet.css">
   <style>
     img 
@@ -32,15 +32,10 @@
 </header>
 <body>
   <h1>STUDY ROOM RESERVATIONS</h1>
-<p>To cancel your study room reservation, enter the following information<br>
-   and click "Confirm". If you do NOT wish to cancel your study room<br>
-    reservation click "Return to Home."</p>
-  <p>STUDENT ID NUMBER: </p>
-  <form><input type="text" size ="10" maxlength="10"></form>
-  <p>CONFIRMATION NUMBER: </p>
-  <form><input type="text" size ="10" maxlength="10"></form>
-  <a href="/confirm-cancelation"><button type ="button">CONFIRM</button></a>
-  <a href="/"><button type ="button">RETURN TO HOME</button></a>
+<p>Your Study Room Appointment has been cancelled</p>
+  <p><a href="/reservations">RESERVATION PAGE</a>
+    <a href="/cancelation">CANCELATION PAGE</a>
+  </p>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
