Kyle's Second Commit for Cancelation

--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -33,9 +33,7 @@
 <body>
   <h1>STUDY ROOM RESERVATIONS</h1>
 <p>Your Study Room Appointment has been cancelled</p>
-  <p><a href="/reservations">RESERVATION PAGE</a>
-    <a href="/cancelation">CANCELATION PAGE</a>
-  </p>
+  <p><a href="/"><button type ="button">RETURN TO HOME</button></a></p>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
