--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -38,8 +38,8 @@
   <p>STUDENT ID NUMBER: </p>
   <form><input type="text" size ="10" maxlength="10"></form>
   <p>CONFIRMATION NUMBER: </p>
-  <form><input type="text" size ="10" maxlength="10"></form>
-  <a href="/confirm-cancelation"><button type ="button">CONFIRM</button></a>
+  <form><input type="text" size ="10" maxlength="10"></form><br>
+  <a href="/confirmcancelation"><button type ="button">CONFIRM</button></a>
   <a href="/"><button type ="button">RETURN TO HOME</button></a>
 </body>
 <footer>&copy;Ogre, Inc</footer>
