--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -63,8 +63,8 @@
   <form><input type="text" size ="10" maxlength="10"></form>
   <p>CONFIRMATION NUMBER: </p>
   <form><input type="text" size ="10" maxlength="10"></form><br>
-  <a href="/confirmcancelation"><button1 type ="button">CONFIRM</button></a>
-  <a href="/"><button2 type ="button">RETURN TO HOME</button></a>
+  <a href="/confirmcancelation"><button type ="button1">CONFIRM</button></a>
+  <a href="/"><button type ="button2">RETURN TO HOME</button></a>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
