--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -11,7 +11,11 @@
     width: 50px;  
     height: 50px;  
     }
-    .button1 {
+    .content {
+      max-width:500px;
+      margin: auto;
+    }
+    .button {
   background-color: #990000;
   border: none;
   color: #EDEBEB;
@@ -23,18 +27,6 @@
   margin: 4px 2px;
   cursor: pointer;
     }
-  .button2 {
-  background-color: #990000;
-  border: none;
-  color: #EDEBEB;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-}
   </style>
 </head>
 <header>  
@@ -63,8 +55,8 @@
   <form><input type="text" size ="10" maxlength="10"></form>
   <p>CONFIRMATION NUMBER: </p>
   <form><input type="text" size ="10" maxlength="10"></form><br>
-  <a href="/confirmcancelation"><button type ="button1">CONFIRM</button></a>
-  <a href="/"><button type ="button2">RETURN TO HOME</button></a>
+  <a href="/confirmcancelation"><button type ="button">CONFIRM</button></a>
+  <a href="/"><button type ="button">RETURN TO HOME</button></a>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
