--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -11,6 +11,18 @@
     width: 50px;  
     height: 50px;  
     }
+    .button {
+  background-color: #990000;
+  border: none;
+  color: #EDEBEB;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+    }
   </style>
 </head>
 <header>  
