--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -51,8 +51,8 @@
   <form><input type="text" size ="10" maxlength="10"></form>
   <p>CONFIRMATION NUMBER: </p>
   <form><input type="text" size ="10" maxlength="10"></form><br>
-  <a href="/confirmcancelation"><button type ="button">CONFIRM</button></a>
-  <a href="/"><button type ="button">RETURN TO HOME</button></a>
+  <a href="/confirmcancelation"><button class ="button">CONFIRM</button></a>
+  <a href="/"><button class ="button">RETURN TO HOME</button></a>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
