--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -11,7 +11,8 @@
     width: 50px;  
     height: 50px;  
     }
-    .button {
+    .button 
+    {
   background-color: #990000;
   border: none;
   color: #EDEBEB;
@@ -22,6 +23,11 @@
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
+    }
+    body
+    {
+  max-width: 500px;
+  margin: auto;
     }
   </style>
 </head>
