--- a/views/confirmcancelation.html
+++ b/views/confirmcancelation.html
@@ -45,7 +45,7 @@
 <body>
   <h1>STUDY ROOM RESERVATIONS</h1>
 <p>Your Study Room Appointment has been cancelled</p>
-  <p><a href="/"><button type ="button">RETURN TO HOME</button></a></p>
+  <p><a href="/"><button class ="button">RETURN TO HOME</button></a></p>
 </body>
 <footer>&copy;Ogre, Inc</footer>
 
