--- a/views/reservations.html
+++ b/views/reservations.html
@@ -97,12 +97,12 @@
   <br></br>
 
   <!-- go back to home page button -->
-  <div class="rvt-button-group">
+  <div>
     <a href = "/"><button class="rvt-button">Go back </button> </a>
   </div>
 
   <!-- go back to next page button -->
-  <div class="rvt-button-group" style="margin: auto;">
+  <div>
   <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
   </div>
 
