--- a/views/reservations.html
+++ b/views/reservations.html
@@ -96,14 +96,10 @@
   
   <br></br>
 
-  <!-- go back to home page button -->
+  <!-- go back to home page and continue buttons -->
   <div>
-    <a href = "/"><button class="rvt-button">Go back </button> </a>
-  </div>
-
-  <!-- go back to next page button -->
-  <div>
-  <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
+    <a href = "/"><button class="rvt-button">Go back </button></a> <p>  </p>
+    <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
   </div>
 
 </body>
