--- a/views/reservations.html
+++ b/views/reservations.html
@@ -98,7 +98,7 @@
 
   <!-- go back to home page and continue buttons -->
   <div>
-    <a href = "/"><button class="rvt-button">Go back </button></a><p>  </p><a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
+    <a href = "/"><button class="rvt-button">Go back </button></a> <a href="/studentinfo"><button class="rvt-button rvt-button--success">Continue </button></a>
   </div>
 
 </body>
