--- a/views/cancelation.html
+++ b/views/cancelation.html
@@ -107,12 +107,49 @@
           </div>
       </div>
   </header>
-<body>
-  <h1>Student Info</h1>
 
-  <a href="/confirmation">Put confirm cancel Button here</a>
-  <a href="/">cancel cancel button</a>
+  <main id="main-content" class="rvt-layout__wrapper">
+    <h1>Cancelation Page</h1>
+
+    <a href="/confirmation">Put confirm cancel Button here</a>
+    <a href="/">cancel cancel button</a>
+
+  </main>
+
+<!-- **************************************************************************
+    Footer: Copyright
+
+    -> v2.rivet.iu.edu/docs/components/footer/
+**************************************************************************** -->
+
+<footer class="rvt-footer-base">
+    <div class="rvt-container-lg">
+        <div class="rvt-footer-base__inner">
+            <div class="rvt-footer-base__logo">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                    <polygon fill="currentColor" points="15.3 3.19 15.3 5 16.55 5 16.55 15.07 13.9 15.07 13.9 1.81 15.31 1.81 15.31 0 8.72 0 8.72 1.81 10.12 1.81 10.12 15.07 7.45 15.07 7.45 5 8.7 5 8.7 3.19 2.5 3.19 2.5 5 3.9 5 3.9 16.66 6.18 18.98 10.12 18.98 10.12 21.67 8.72 21.67 8.72 24 15.3 24 15.3 21.67 13.9 21.67 13.9 18.98 17.82 18.98 20.09 16.66 20.09 5 21.5 5 21.5 3.19 15.3 3.19" fill="#231f20" />
+                </svg>
+            </div>
+            <ul class="rvt-footer-base__list">
+                <li class="rvt-footer-base__item">
+                    <a class="rvt-footer-base__link" href="https://accessibility.iu.edu/assistance/">Accessibility</a>
+                </li>
+                <li class="rvt-footer-base__item">
+                    <a class="rvt-footer-base__link" href="#0">Privacy Notice</a>
+                </li>
+                <li class="rvt-footer-base__item">
+                    <a class="rvt-footer-base__link" href="#0">Copyright</a> © 2021 The Trustees of <a class="rvt-footer-base__link" href="https://www.iu.edu">Indiana University</a>
+                </li>
+                <li class="rvt-footer-base__item">
+                  <a class="rvt-footer-base__link" href="#0">Created by Ogre, Inc</a>
+              </li>
+            </ul>
+        </div>
+    </div>
+</footer>
+<script src="https://unpkg.com/rivet-core@2.0.0-beta.2/js/rivet.min.js"></script>
+<script>
+  Rivet.init();
+</script>
 </body>
-<footer>&copy;Ogre, Inc</footer>
-
 </html>
