more name changes

--- a/views/index.html
+++ b/views/index.html
@@ -107,7 +107,7 @@
         <!-- input text box for date -->
         
         <div>
-          <a href = "/reservations"><button class="rvt-button">Reservations</button></a> <a href="/cancellation"><button class="rvt-button rvt-button--success">Cancel </button></a>
+          <a href = "/reservations"><button class="rvt-button">Reservations</button></a> <a href="/cancellation"><button class="rvt-button rvt-button--success">Cancellations </button></a>
         </div>
       
       </body>
