--- a/views/studentinfo.html
+++ b/views/studentinfo.html
@@ -91,15 +91,22 @@
       </div>
   </header>
 
-    
-
-    <main id="main-content" class="rvt-layout__wrapper">
-    
-        <h1>Student Information</h1>
-  
-        <a href="/confirmation">Put Confirmation Button here</a>
-    
-    </main>
+  <body>
+    <h1>Study Room Reservations</h1>
+    <h2>Student Information</h2>
+    <p>Please enter the following information:</p>
+  <form>
+    <label for="name">First and Last Name</label><br>
+    <input type="text" id="name" name="name"><br>
+    <label for="idnum">Student ID Number</label><br>
+    <input type="text" id="idnum" name="idnum"><br><br>
+    <label for="email"></label>IU Email Address<br>
+    <input type="text" id="email" name="email"><br><br>
+    <label for="reservation">Reservation Name (To Appear on Door)</label><br>
+    <input type="text" id="reservation" name="reservation"><br><br>
+    <button><a href="/confirmation">Submit<nput type="submit" value="Go"></a></button>
+  </form>
+  </body>
 
     <footer class="rvt-footer-base">
         <div class="rvt-container-lg">
