--- a/views/cancellation.html
+++ b/views/cancellation.html
@@ -26,7 +26,7 @@
               <div class="rvt-container-lg">
                   <div class="rvt-header-global__inner">
                       <div class="rvt-header-global__logo-slot">
-                          <a class="rvt-lockup" href="#0">
+                          <a class="rvt-lockup" href="/">
                               
                               
       
