--- a/views/confirmation.html
+++ b/views/confirmation.html
@@ -88,64 +88,19 @@
                   </div>
               </div>
           </div>
-
-          <style>
-            h1 {
-            font-size: xx-large;
-            font-weight: bold;
-            text-align: center;
-            }
-
-            .p {
-                padding-left: 10px;
-                font-size: medium;    
-            }
-
-            svg{
-            float:left;
-            width: 80px;  
-            height: 80px;
-            padding-bottom: 25px;
-            }
-
-          </style>
       </header>
-
   <!--Main content area-->
   <main id="main-content" class="rvt-layout__wrapper">
 
 
   <h1>Confirmation</h1>
-
-<!-- Confirmation alert -->
-  <div class="rvt-alert rvt-alert--success [ rvt-m-top-md ]" role="alert" aria-labelledby="success-alert-title" data-rvt-alert="success">
-    <div class="rvt-alert__title" id="success-alert-title">Your study room has been booked!
-        <svg version="1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" enable-background="new 0 0 48 48">
-            <polygon fill="#8BC34A" points="24,3 28.7,6.6 34.5,5.8 36.7,11.3 42.2,13.5 41.4,19.3 45,24 41.4,28.7 42.2,34.5 36.7,36.7 34.5,42.2 28.7,41.4 24,45 19.3,41.4 13.5,42.2 11.3,36.7 5.8,34.5 6.6,28.7 3,24 6.6,19.3 5.8,13.5 11.3,11.3 13.5,5.8 19.3,6.6"/>
-            <polygon fill="#CCFF90" points="34.6,14.6 21,28.2 15.4,22.6 12.6,25.4 21,33.8 37.4,17.4"/>
-        </svg>
-    </div>
-    <p class="rvt-alert__message">Your confirmation number is: </p>
-    <button class="rvt-alert__dismiss" data-rvt-alert-close>
-      <span class="rvt-sr-only">Dismiss this alert</span>
-      <svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
-        <path fill="currentColor">
-      </svg>
-    </button>
-  </div>
-
-  <br>
-
-<!-- Button to go back to welcome page -->  
-<div class="button">
-    <a href = "/"><button class="rvt-button">Return To Home</button>    
-</div>
-  
+<p>thank you</p>
   
  </main>
 
 <!-- **************************************************************************
     Footer: Copyright
+
     -> v2.rivet.iu.edu/docs/components/footer/
 **************************************************************************** -->
 
