--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex">
   <title>Scheduler</title>
-  <link rel="shortcut icon" type="image/jpg" href="/Users/jeanredfern/Documents/IUK Spring 2022/Dev & Design/CapstoneProject/views/images/favicon.jpg"/>
+  <link href="https://assets.iu.edu/favicon.ico" rel="shortcut icon" type="image/x-icon"/>
   <link rel="stylesheet" href="https://unpkg.com/rivet-core@2.0.0-beta.2/css/rivet.min.css">
 </head>
 <body class="rvt-layout">
